# nautilus

./: .buildconfig  .clang-format  .cvsignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .triage-policies.yml  AUTHORS  CONTRIBUTING.md  ChangeLog  ChangeLog-200001018  ChangeLog-20000414  ChangeLog-20000625  ChangeLog-20000831  ChangeLog-20010201  ChangeLog-20010420  HACKING  HACKING.md  INSTALL.md  MAINTAINERS  Makefile.am  Makefile.shared  NEWS  OVERVIEW  README  README.commits  README.md  RENAMING  RPMs-README  THANKS  TODO  TRADEMARK_NOTICE  acconfig.h  add-include-prefix  autogen.sh  check-FIXME.pl  check-POTFILES.pl  (+40 more)
components/: Makefile.am
data/: .cvsignore  .gitignore  Makefile.am  applications.desktop.in  browser.xml  check-potfiles.sh  dbus-ext-man.xml  dbus-interfaces.xml  dbus-interfaces2.xml  favorites.desktop.in  file-impl.xml  freedesktop-dbus-interfaces.xml  leak-suppress.txt  leak-supress.txt  lineup-parameters.c  meson.build  nautilus-autorun-software.desktop.in  nautilus-autorun-software.desktop.in.in  nautilus-autostart.desktop.in  nautilus-browser.desktop.in.in  nautilus-classic.desktop.in  nautilus-computer.desktop.in.in  nautilus-file-management-properties.desktop.in.in  nautilus-folder-handler.desktop.in.in  nautilus-home.desktop.in.in  nautilus.css  nautilus.desktop.in.in  nautilus.portal.in  nautilus.xml.in  org.gnome.Nautilus.appdata.xml.in  org.gnome.Nautilus.appdata.xml.in.in  org.gnome.Nautilus.desktop.in  org.gnome.Nautilus.desktop.in.in  org.gnome.Nautilus.metainfo.xml.in.in  org.gnome.Nautilus.search-provider.ini.in  org.gnome.Nautilus.service.in  org.gnome.NautilusDevel.service.in  org.gnome.nautilus.gschema.xml  preferences.desktop.in  programs.desktop.in  (+10 more)
docs/: .gitignore  CODING-STYLE.md  Makefile.am  Overview.md  architecture.txt  design.txt  dnd.txt  eazel-services-framework  eazel-services-framwork  gnomad-notes.txt  key_mouse_navigation.txt  meson.build  metaitems.txt  nautilus-autorun-software.1  nautilus-connect-server.1  nautilus-context-menus.txt  nautilus-file-management-properties.1  nautilus-io.txt  nautilus.1  nautilus.faq  recommended-books.html  smoketests.html  state-machines.txt  style-guide.html  use-cases.txt
eel/: .gitignore  ChangeLog  Makefile.am  check-eel  check-program.c  eel-accessibility.c  eel-accessibility.h  eel-alert-dialog.c  eel-alert-dialog.h  eel-art-extensions.c  eel-art-extensions.h  eel-art-gtk-extensions.c  eel-art-gtk-extensions.h  eel-background-box.c  eel-background-box.h  eel-background.c  eel-background.h  eel-canvas-rect-ellipse.c  eel-canvas-rect-ellipse.h  eel-canvas-util.c  eel-canvas-util.h  eel-canvas.c  eel-canvas.h  eel-debug-drawing.c  eel-debug-drawing.h  eel-debug.c  eel-debug.h  eel-editable-label.c  eel-editable-label.h  eel-enumeration.c  eel-enumeration.h  eel-event.c  eel-event.h  eel-gconf-extensions.c  eel-gconf-extensions.h  eel-gdk-extensions.c  eel-gdk-extensions.h  eel-gdk-pixbuf-extensions.c  eel-gdk-pixbuf-extensions.h  eel-glib-extensions.c  (+42 more)
helper-scripts/: Makefile.am  nautilus-restore-settings-to-default.sh  nautilus-verify-rpm.sh
icons/: Makefile.am  default.xml  i-directory-accept.xml  i-directory.xml  i-regular.xml
libnautilus-adapter/: .cvsignore  Makefile.am  nautilus-adapter-factory.idl
libnautilus-extension/: .cvsignore  .gitignore  Makefile.am  libnautilus-extension-uninstalled.pc.in  libnautilus-extension.pc.in  meson.build  nautilus-column-provider.c  nautilus-column-provider.h  nautilus-column.c  nautilus-column.h  nautilus-extension-private.h  nautilus-extension-types.c  nautilus-extension-types.h  nautilus-extension.h  nautilus-file-info-interface.h  nautilus-file-info.c  nautilus-file-info.h  nautilus-info-provider.c  nautilus-info-provider.h  nautilus-location-widget-provider.c  nautilus-location-widget-provider.h  nautilus-menu-item.c  nautilus-menu-item.h  nautilus-menu-provider.c  nautilus-menu-provider.h  nautilus-menu.c  nautilus-menu.h  nautilus-properties-item.c  nautilus-properties-item.h  nautilus-properties-model-provider.c  nautilus-properties-model-provider.h  nautilus-properties-model.c  nautilus-properties-model.h  nautilus-property-page-model-provider.c  nautilus-property-page-model-provider.h  nautilus-property-page-model.c  nautilus-property-page-model.h  nautilus-property-page-provider.c  nautilus-property-page-provider.h  nautilus-property-page.c  (+1 more)
libnautilus-extensions/: .cvsignore  Makefile.am  bonobo-stream-vfs.c  gdk-extensions.c  gdk-extensions.h  gnome-icon-container-dnd.c  gnome-icon-container-dnd.h  gnome-icon-container-grid.c  gnome-icon-container-grid.h  gnome-icon-container-layout.c  gnome-icon-container-layout.h  gnome-icon-container-private.h  gnome-icon-container.c  gnome-icon-container.h  gnome-progressive-loader.c  gnome-progressive-loader.h  gtkflist.c  gtkflist.h  gtkscrollframe.c  libnautilus-extensions.h  libnautilus.h  nautilus-annotation.c  nautilus-annotation.h  nautilus-any-width-bin.c  nautilus-any-width-bin.h  nautilus-art-extensions.c  nautilus-art-extensions.h  nautilus-art-gtk-extensions.c  nautilus-art-gtk-extensions.h  nautilus-background-canvas-group.c  nautilus-background-canvas-group.h  nautilus-background.c  nautilus-background.h  nautilus-bonobo-extensions.c  nautilus-bonobo-extensions.h  nautilus-bookmark.c  nautilus-bookmark.h  nautilus-buffered-widget.c  nautilus-buffered-widget.h  nautilus-canvas-note-item.c  (+249 more)
libnautilus-private/: .cvsignore  .gitignore  Makefile.am  README  apps_nautilus_preferences.schemas  apps_nautilus_preferences.schemas.in  bonobo-stream-vfs.c  bonobo-stream-vfs.h  bug-5712-pr3-workaround--gdk-pixbuf-drawable.c  bug-5712-pr3-workaround--gdk-pixbuf-private.h  bug-5712-pr3-workaround--gdkimage.c  desktop-file-loader.c  desktop-file-loader.h  egg-recent-item.h  egg-recent-model.h  egg-recent-vfs-utils.h  egg-screen-exec.c  egg-screen-help.c  egg-screen-help.h  egg-screen-url.c  egg-screen-url.h  eggtreemultidnd.c  filesystem-attributes.xml  gdk-extensions.c  gdk-extensions.h  gnome-icon-container-dnd.c  gtkflist.c  (+441 more)
(+3216 files in other folders)
